--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
     <link rel="stylesheet" href="style.min.css" />
   </head>
   <body>
-    <h1>BlackJack</h1>
+    <h1 id="title">BlackJack</h1>
+    <p id="message-el">Want to play a round?</p>
+    <p id="cards-el">Cards:</p>
+    <p id="sum-el">Sum:</p>
+    <button id="start-btn" onclick="startGame()">START GAME</button>
+    <button id="card-btn" onclick="newCard()">NEW CARD</button>
+    <p id="player-el"></p>
     <script src="main.js"></script>
   </body>
 </html>
